[gd_scene load_steps=14 format=3 uid="uid://b3bd2ccqkh00a"]

[ext_resource type="Script" uid="uid://c3uatp5gji5ue" path="res://Inventory/UI/InventoryUI/scrINV_UI.gd" id="1_dhcfh"]
[ext_resource type="Texture2D" uid="uid://cwn4h5cyakgm7" path="res://Art/TravelBookUI/Sprites/UI_TravelBook_BookCover01a.png" id="2_il5vc"]
[ext_resource type="Texture2D" uid="uid://csfcknshv14od" path="res://Art/TravelBookUI/Sprites/UI_TravelBook_BookPageRight01a.png" id="3_pct40"]
[ext_resource type="PackedScene" uid="uid://0luyfwm87ckl" path="res://Inventory/UI/InventoryUI/nInvSlotUI.tscn" id="4_keych"]
[ext_resource type="Texture2D" uid="uid://so2dglihxik1" path="res://Art/TravelBookUI/Sprites/UI_TravelBook_BookPageLeft01a.png" id="5_kydoc"]
[ext_resource type="PackedScene" uid="uid://ei8qtpsb0tex" path="res://Inventory/UI/DebugUI/nDebugMenu.tscn" id="7_e8s8e"]
[ext_resource type="PackedScene" uid="uid://c8aw6sgpiap08" path="res://UI/ActionUI/nActionUI.tscn" id="8_20xsb"]
[ext_resource type="PackedScene" uid="uid://dv0y07r2i4vmd" path="res://UI/HomeMenuUI/nHomeMenuUI.tscn" id="9_2bf1r"]
[ext_resource type="PackedScene" uid="uid://2nnh4f80nnll" path="res://UI/DestinationMenuUI/nDestinationMenuUI.tscn" id="9_sfvvv"]
[ext_resource type="Script" uid="uid://h20ddr8cjwko" path="res://UI/CombatMenuUI/scrCombatMenuUI.gd" id="10_2bf1r"]
[ext_resource type="Script" uid="uid://0k82eyh0nyh7" path="res://Inventory/Scripts/scrInventoryActions.gd" id="11_2xcof"]
[ext_resource type="Script" uid="uid://cgimejhachxg6" path="res://Character/UI/scrCharacterDisplayController.gd" id="11_kbc3c"]
[ext_resource type="Script" uid="uid://7jr5oueo8fsy" path="res://Inventory/Scripts/scrItemDragGfx.gd" id="12_6j3o5"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -798.0
offset_bottom = -455.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhcfh")

[node name="BookBackgroundSprite" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_il5vc")
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13

[node name="RightPageUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BookRightPageSprite" type="NinePatchRect" parent="RightPageUI"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.03
anchor_right = 0.97
anchor_bottom = 0.97
offset_top = 0.21
offset_bottom = 0.210007
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_pct40")
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13
axis_stretch_vertical = 1

[node name="CharacterUI" type="Control" parent="RightPageUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 83.19
offset_top = 0.210007
offset_right = 83.19
offset_bottom = 0.210007
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterDisplay" parent="RightPageUI/CharacterUI" instance=ExtResource("8_20xsb")]
layout_mode = 1
offset_left = 0.0
offset_top = -42.5
offset_right = 0.0
offset_bottom = -42.5
IsPlayerDisplay = true

[node name="DebugMenu" parent="RightPageUI/CharacterUI" instance=ExtResource("7_e8s8e")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 123.78
offset_top = 0.304878
offset_right = 163.78
offset_bottom = 40.3049
grow_horizontal = 1
grow_vertical = 1

[node name="InventoryUI" type="Control" parent="RightPageUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryActions" type="Control" parent="RightPageUI/InventoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_2xcof")
metadata/_custom_type_script = "uid://0k82eyh0nyh7"

[node name="ItemDragGfxHandler" type="Control" parent="RightPageUI/InventoryUI/InventoryActions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_6j3o5")
DraggedItemUIOffset = Vector2(13, 15)
metadata/_custom_type_script = "uid://7jr5oueo8fsy"

[node name="InvSlotUI" parent="RightPageUI/InventoryUI/InventoryActions/ItemDragGfxHandler" instance=ExtResource("4_keych")]
layout_mode = 0
scale = Vector2(0.7, 0.7)

[node name="InventoryGrid" type="GridContainer" parent="RightPageUI/InventoryUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = 40.5
offset_right = 218.0
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.77, 0.77)
columns = 6

[node name="InvSlotUI" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI2" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI3" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI4" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI5" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI6" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI7" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI8" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI9" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI10" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI11" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="InvSlotUI12" parent="RightPageUI/InventoryUI/InventoryGrid" instance=ExtResource("4_keych")]
layout_mode = 2

[node name="BookLeftPageSprite" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.03
anchor_right = 0.5
anchor_bottom = 0.97
grow_vertical = 2
texture = ExtResource("5_kydoc")
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13
axis_stretch_vertical = 1

[node name="DestinationMenuUI" parent="BookLeftPageSprite" instance=ExtResource("9_sfvvv")]
visible = false
layout_mode = 1
offset_left = 0.256119
offset_top = 1.48781
offset_right = 0.256119
offset_bottom = 1.48781

[node name="HomeMenuUI" parent="BookLeftPageSprite" instance=ExtResource("9_2bf1r")]
visible = false
layout_mode = 1

[node name="CombatMenuUI" type="Control" parent="BookLeftPageSprite" node_paths=PackedStringArray("ButtonParent")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_2bf1r")
ButtonParent = NodePath("CombatMenuButtons")

[node name="CharacterDisplay" parent="BookLeftPageSprite/CombatMenuUI" instance=ExtResource("8_20xsb")]
layout_mode = 1
offset_left = 0.0
offset_top = -42.5
offset_right = 0.0
offset_bottom = -42.5

[node name="CombatMenuButtons" type="GridContainer" parent="BookLeftPageSprite/CombatMenuUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 46.5
offset_right = 20.0
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterDisplayController" type="Node" parent="." node_paths=PackedStringArray("PlayerDisplay", "EnemyDisplay")]
script = ExtResource("11_kbc3c")
PlayerDisplay = NodePath("../RightPageUI/CharacterUI/CharacterDisplay")
EnemyDisplay = NodePath("../BookLeftPageSprite/CombatMenuUI/CharacterDisplay")
metadata/_custom_type_script = "uid://cgimejhachxg6"
